bikes-service-api/src/main/java/com/example/bikes_service_api/utils/ErrorHandling/Errors/InvalidDataException.java
package com.example.bikes_service_api.utils.ErrorHandling.Errors;

public class InvalidDataException extends RuntimeException{
    public InvalidDataException(String message){
        super(message);
    }
}
